[update] OverseasCard  css 작업 완료

--- a/front/src/components/Footer.css
+++ b/front/src/components/Footer.css
@@ -23,12 +23,12 @@ footer {
   font-size: 14px;
 }
 
-.info {
+.company-info {
   display: flex;
   flex-direction: column;
 }
 
-.info p {
+.company-info p {
   color: rgb(153, 153, 153);
   font-size: 12px;
   margin: 0;
